--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-spring.application.name=server
+spring.application.name = server
+
+spring.data.mongodb.uri = mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@localhost:27017/${MONGO_DATABASE_NAME}?authSource=admin
+spring.data.mongodb.database = ${MONGO_DATABASE_NAME}
