GIGA-19 docker compose с тестами

--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,7 @@ tasks.register('testJar', Jar) {
     from {
        sourceSets.test.runtimeClasspath.filter { it.name != 'main' }.collect { it.isDirectory() ? it : zipTree(it) }
     }
-    archiveClassifier = 'test'
+    archiveBaseName = 'testJar'
     from sourceSets.test.output
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
