--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,2 @@
 spring.application.name = server
-
-spring.data.mongodb.host=${mongodb.host:localhost}
-spring.data.mongodb.uri = mongodb://username:password@${spring.data.mongodb.host}:27017/$pablobullers?authSource=admin
-spring.data.mongodb.database = pablobullers
+spring.profiles.default = dev
