--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.data.mongodb.host=${mongodb.host:localhost}
+spring.data.mongodb.host=${mongodb.host:mongo-prod}
 mongodb.username=
 mongodb.password=
 spring.data.mongodb.uri = mongodb://${mongodb.username}:${mongodb.password}@${spring.data.mongodb.host}:27017/$pablobullers?authSource=admin
