--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,13 @@ repositories {
     mavenCentral()
 }
 
+sonar {
+    properties {
+        property "sonar.projectKey", "pb.studyconnect:StudyConnectMaster"
+        property "sonar.projectName", "StudyConnectMaster"
+    }
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     implementation 'org.springframework.boot:spring-boot-starter-web'
