GIGA-54 sonar props

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,2 @@
 org.gradle.jvmargs=-Xmx2048M
-systemProp.sonar.host.url=http://localhost:9000
+systemProp.sonar.host.url=https://sonar.gigachadus.ru
