--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,13 @@ sonar {
     }
 }
 
+sourceSets {
+    itest {
+        java {
+        }
+    }
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -39,9 +46,12 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.34'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.2'
 
-    testImplementation 'io.rest-assured:rest-assured:5.5.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    itestImplementation 'io.rest-assured:rest-assured:5.5.0'
+    itestImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+    itestRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    //testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 jar {
@@ -49,18 +59,23 @@ jar {
 }
 
 test {
-    enabled = gradle.startParameter.taskNames.contains('test')
+    useJUnitPlatform()
+}
+
+tasks.register('itest', Test) {
+    testClassesDirs = sourceSets.itest.output.classesDirs
+    classpath = sourceSets.itest.runtimeClasspath
     systemProperties(System.getProperties())
     useJUnitPlatform()
 }
 
-tasks.register('testJar', Jar) {
+tasks.register('itestJar', Jar) {
     dependsOn(compileJava)
     dependsOn(processResources)
     from {
-       sourceSets.test.runtimeClasspath.filter { it.name != 'main' }.collect { it.isDirectory() ? it : zipTree(it) }
+       sourceSets.itest.runtimeClasspath.filter { it.name != 'main' }.collect { it.isDirectory() ? it : zipTree(it) }
     }
-    archiveBaseName = 'testJar'
-    from sourceSets.test.output
+    archiveBaseName = 'itestJar'
+    from sourceSets.itest.output
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
