GIGA-55 fix sonar

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,11 @@
 spring.application.name = server
 spring.profiles.default = dev
+
+sonar.sources=src
+sonar.language=java
+sonar.binaries=build/classes
+sonar.tests=junit
+sonar.dynamicAnalysis=reuseReports
+sonar.junit.reportsPath=build/test-results
+sonar.java.coveragePlugin=jacoco
+sonar.jacoco.reportPath=build/jacoco/test.exec
