--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.3.4'
     id 'io.spring.dependency-management' version '1.1.6'
+    id 'jacoco'
     id 'org.sonarqube' version '5.1.0.4882'
 }
 
@@ -60,7 +61,9 @@ jar {
 
 test {
     useJUnitPlatform()
+    finalizedBy jacocoTestReport
 }
+check.dependsOn jacocoTestCoverageVerification
 
 tasks.register('itest', Test) {
     testClassesDirs = sourceSets.itest.output.classesDirs
