--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,8 @@ dependencies {
     itestRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.assertj:assertj-core:3.26.3'
+
     //testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
